--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "got": "^11.8.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@types/got": "^9.6.11",
+    "@types/node-fetch": "^2.5.8",
     "typescript": "^4.1.5"
   }
 }
