--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "beatrenamer",
+  "name": "beatquest-renamer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build-linux": "npm run compile && pkg -t node14-linux dist/index.js -o beatquest-renamer",
+    "build-win": "npm run compile && pkg -t node14-win dist/index.js -o beatquest-renamer",
     "clean": "rimraf dist",
     "compile": "tsc src/*.ts --outDir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +23,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "pkg": "^4.4.9",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
